# multikart-backend-api

./: .gitignore  README.md  main.py  requirements.txt
PollApp/: Dockerfile  README.md  docker-compose.yml  postgres.env  pyproject.toml
PollApp/app/app/: Config.py  alembic.ini  database.py  main.py  sqlite.db
PollApp/app/app/alembic/versions/: 758ad7b1398a_my_initial_migration.py
PollApp/app/app/polls/: crud.py  endpoints.py  models.py  schemas.py
PollApp/app/tests/: test_endpoints.py  test_main.py
app/: main.py
app/crud/: products_crud.py  ratings_crud.py
app/database/: database.py
app/dependencies/: database_dependency.py
app/models/: products_models.py  rating_models.py
app/routes/: products_routes.py  rating_routes.py
app/schemas/: products_schema.py  ratings_schema.py
app/tests/: test_main.py  test_products.py  test_ratings.py
